# sfml-playground

./: README.md
hello/: CMakeLists.txt
hello/src/: hello.cpp
resource_management/: CMakeLists.txt
resource_management/src/: fonts.h  game.cpp  game.h  main.cpp  resource_holder.h  texture_holder.cpp  texture_holder.h  textures.h
sprites/: CMakeLists.txt
sprites/src/: game.cpp  game.h
